--- a/kalkulasi.html
+++ b/kalkulasi.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width,initial-scale=1" />
     <meta name="theme-color" content="#ebc2b5" />
     <title>Kalkulator Harga Olshop</title>
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="style.css?v=1" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" />
   </head>
   <body>
@@ -343,6 +343,6 @@
 	    	</div>
     	</div>
     </div>
-    <script src="script.js"></script>
+    <script src="script.js?v=1"></script>
   </body>
 </html>
