--- a/test.html
+++ b/test.html
@@ -31,7 +31,7 @@
 <!-- ========================================================= -->
 <!-- SCAN SEMUA SERVICE DAN CHARACTERISTIC -->
 <!-- ========================================================= -->
-<script>/*
+<script>
 async function scanBluetooth() {
     try {
         const device = await navigator.bluetooth.requestDevice({
@@ -66,7 +66,7 @@ async function scanBluetooth() {
         alert("Error: " + err);
     }
 }
-*/
+
 /*
 async function scanBluetooth() {
     try {
