--- a/test.html
+++ b/test.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 <meta charset="utf-8" />
+<meta name="viewport" content="width=width-device, scale=1.0"/>
 <title>Thermal Print 58mm</title>
 <style>
   body { font-family: Arial; padding: 20px; }
